- Added Tirisfal Pumpkin to the loot table of Tirisfal Farmhand for the quest Fields of Grief.
- Updated the flags of Tirisfal Pumpkin to allow every member of a group to loot it.

[2023-01-15]
- Updated the flags of Discolored Worg Heart to allow every member of a group to loot it.

[2023-01-24]
- Added Shellfish to the loot table of Drysnap Crawler for the quest Fish in a Bucket.
- Added Shellfish to the loot table of Drysnap Pincer for the quest Fish in a Bucket.
- Updated the flags of Shellfish to allow every member of a group to loot it.

[2023-01-29]
- Added Hinterlands Honey Ripple to the loot table of Green Sludge for the quest A Sticky Situation.
- Added Hinterlands Honey Ripple to the loot table of Jade Ooze for the quest A Sticky Situation.
- Updated the flags of Hinterlands Honey Ripple to allow every member of a group to loot it.

[2023-01-30]
- Added the script for the spell Capture Beast to make the quests Hippogryph Muisek, Faerie Dragon Muisek, Treant Muisek and Mountain Giant Muisek give the item to every member of a group.
- Added Gahz'ridian Ornament to the loot table of Dunemaul Ogre for the quest Gahz'ridian.
- Added Gahz'ridian Ornament to the loot table of Dunemaul Enforcer for the quest Gahz'ridian.
- Added Gahz'ridian Ornament to the loot table of Dunemaul Ogre Mage for the quest Gahz'ridian.
- Added Gahz'ridian Ornament to the loot table of Dunemaul Brute for the quest Gahz'ridian.
- Added Gahz'ridian Ornament to the loot table of Dunemaul Warlock for the quest Gahz'ridian.
- Updated the flags of Gahz'ridian Ornament to allow every member of a group to loot it.

[2023-02-10]
- Added Bloodspore Carpel to the loot table of Bloodspore Moth for the quest The Wondrous Bloodspore.
- Updated the flags of Bloodspore Carpel to allow every member of a group to loot it.

[2023-02-13]
- Updated the flags of Uncured Caribou Hide to allow every member of a group to loot it.