@@ -346,6 +346,17 @@ INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`
 DELETE FROM `creature_loot_template` WHERE `Entry`=24566 AND `Item`=34709;
 INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (24566, 34709, 32, 1, 'Nerub\'ar Skitterer - Warsong Munitions');
 
+-- Scourged Earth (Quest: The Bad Earth (Id: 11630))
+-- Scourged Mammoth
+DELETE FROM `creature_loot_template` WHERE `Entry`=25452 AND `Item`=34774;
+INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (25452, 34774, 26, 1, 'Scourged Mammoth - Warsong Munitions');
+-- Tundra Crawler
+DELETE FROM `creature_loot_template` WHERE `Entry`=25454 AND `Item`=34774;
+INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (25454, 34774, 36, 1, 'Tundra Crawler - Warsong Munitions');
+-- Plagued Magnataur
+DELETE FROM `creature_loot_template` WHERE `Entry`=25615 AND `Item`=34774;
+INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (25615, 34774, 29, 1, 'Plagued Magnataur - Warsong Munitions');
+
 -- Super Strong Metal Plate (Quest: Super Strong Metal Plates! (Id: 11644))
 -- Kvaldir Mist Lord
 DELETE FROM `creature_loot_template` WHERE `Entry`=25496 AND `Item`=34786;
