@@ -2110,6 +2110,9 @@ UPDATE `item_template` SET `Flags`=`Flags`|2048 WHERE `entry`=34618;
 -- Warsong Munitions (Quest: Patience is a Virtue that We Don't Need (Id: 11606))
 UPDATE `item_template` SET `Flags`=`Flags`|2048 WHERE `entry`=34709;
 
+-- Scourged Earth (Quest: The Bad Earth (Id: 11630))
+UPDATE `item_template` SET `Flags`=`Flags`|2048 WHERE `entry`=34774;
+
 -- Scourged Mammoth Pelt (Quest: Shrouds of the Scourge (Id: 11628))
 UPDATE `item_template` SET `Flags`=`Flags`|2048 WHERE `entry`=34775;
 
